crystal-facet-uml (1.34.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * undo of paste requires just 1 click on undo (as in version 1.33.1)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 04 Dec 2021 20:00:00 +0200

crystal-facet-uml (1.34.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * no error if gtk_init_check fails - otherwise tests would fail

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 29 Nov 2021 20:00:00 +0200

crystal-facet-uml (1.34.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * export in json format contains also uuids as links (for auto-merging)
  * export in json format nicer for humans to read (for diff and merge)
  * export in json format contains also lifelines

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 28 Nov 2021 21:00:00 +0200

crystal-facet-uml (1.33.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * fix: When cutting a diagram, one can immediately paste it to the previous
    position; also paste it immediately after opening a new db.
  * Layouting of lines prefers connector types Z over S, N over L7

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 23 Oct 2021 18:00:00 +0200

crystal-facet-uml (1.33.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The database has new fields uuid and diagram.display_flags
  * fix: when copying objects via clipboard, the last characters are
    not dropped if escape-sequences cause exceeding maximum string length
  * json export (experimental)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 16 Oct 2021 08:00:00 +0200

crystal-facet-uml (1.32.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * test_expand_space is now more robust against unexpected installed fonts

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 29 Aug 2021 19:00:00 +0200

crystal-facet-uml (1.32.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * overlaps between relationships with identical type, source and destination
    are avoided.